--- a/LABS/Lab-2/2A. Shark Tank.ipynb
+++ b/LABS/Lab-2/2A. Shark Tank.ipynb
@@ -593,11 +593,9 @@
    ],
    "source": [
     "# YOUR CODE HERE\n",
-    "# Ensure you use the correct column name casing, including the 'O'Leary' column\n",
-    "cols_to_modify = ['Corcoran', 'Cuban', 'Greiner', 'Herjavec', 'John', \"O'Leary\", 'Harrington', 'Guest']\n",
+    "cols = ['Corcoran', 'Cuban', 'Greiner', 'Herjavec', 'John', \"O'Leary\", 'Harrington', 'Guest']\n",
     "\n",
-    "# Then, apply the fillna operation\n",
-    "df[cols_to_modify] = df[cols_to_modify].fillna(0)\n",
+    "df[cols] = df[cols].fillna(0)\n",
     "\n",
     "\n",
     "df"
@@ -1036,7 +1034,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parth\\AppData\\Local\\Temp\\ipykernel_27288\\918456078.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\parth\\AppData\\Local\\Temp\\ipykernel_37732\\918456078.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1912,6 +1910,7 @@
     "df['John'] = df['John']/num_sharks\n",
     "df[\"O'Leary\"] = df[\"O'Leary\"]/num_sharks\n",
     "df['Harrington'] = df['Harrington']/num_sharks\n",
+    "\n",
     "df"
    ]
   },
@@ -2286,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2303,19 +2302,20 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "most_shark_invested = df.loc[:, 'Corcoran':'Guest'].sum()\n",
+    "\n",
     "most_shark_invested"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2324,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2371,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2398,7 +2398,7 @@
        "Name: Equity, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2411,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2420,7 +2420,7 @@
        "<Axes: xlabel='Industry'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2478,6 +2478,11 @@
     "\n",
     "4. Demo your lab by next Tuesday for full credit."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
