fixed Katex error

--- a/LABS/Lab-3/3A Relationships between Categorical Variables.ipynb
+++ b/LABS/Lab-3/3A Relationships between Categorical Variables.ipynb
@@ -1370,11 +1370,11 @@
     "\n",
     "_Question 1._ What proportion of 3rd class passengers embarked at Southampton?\n",
     "\n",
-    "$$P\\big(\\textrm{embarked at Southampton}\\ \\big|\\ \\textrm{in 3rd class}\\big) = \\frac{\\text{# passengers who embarked at Southampton and in 3rd class}}{\\text{# passengers who in 3rd class}}$$\n",
+    "$$P\\big(\\textrm{embarked at Southampton}\\ \\big|\\ \\textrm{in 3rd class}\\big) = \\frac{\\text{ passengers who embarked at Southampton and in 3rd class}}{\\text{passengers who in 3rd class}}$$\n",
     "\n",
     "_Question 2._ What proportion of Southampton passengers were in 3rd class? \n",
     "\n",
-    "$$P\\big(\\textrm{in 3rd class}\\ \\big|\\ \\textrm{embarked at Southampton}\\big) = \\frac{\\text{# passengers who embarked at Southampton and in 3rd class}}{\\text{# passengers who embarked at Southampton}} \\\\ $$\n",
+    "$$ P\\big(\\textrm{in 3rd class}\\ \\big|\\ \\textrm{embarked at Southampton}\\big) = \\frac{\\text{passengers who embarked at Southampton and in 3rd class}}{\\text{ passengers who embarked at Southampton}} \\\\ $$\n",
     "\n",
     "\n",
     "\n",
@@ -1384,7 +1384,7 @@
     "\n",
     "_Question 3._ What proportion of passengers embarked at Southampton _and_ were in 3rd class?\n",
     "\n",
-    "$$P(\\text{embarked at Southampton and in 3rd class}) = \\frac{\\text{# passengers who embarked at Southampton and in 3rd class}}{\\text{# passengers (total)}}$$\n",
+    "$$P(\\text{embarked at Southampton and in 3rd class}) = \\frac{\\text {passengers who embarked at Southampton and in 3rd class}}{\\text{passengers (total)}}$$\n",
     "\n",
     "The reference population here is all passengers. This is the proportion that one would get from the joint distribution.\n",
     "\n",
