--- a/LABS/Lab-3/3A Relationships between Categorical Variables.ipynb
+++ b/LABS/Lab-3/3A Relationships between Categorical Variables.ipynb
@@ -2709,7 +2709,7 @@
    ],
    "source": [
     "# ENTER YOUR CODE HERE\n",
-    "\n",
+    "# What proportion of Saturday parties had 2 people?\n",
     "conditional_table\n"
    ]
   },
@@ -2812,6 +2812,8 @@
     }
    ],
    "source": [
+    "#Proportion of 2-person parties that dined on Saturday?\n",
+    "\n",
     "two_person_party = contingency_table.divide(contingency_table.sum(axis=0),axis=1)\n",
     "two_person_party"
    ]
