--- a/LABS/Lab-3/3A Relationships between Categorical Variables.ipynb
+++ b/LABS/Lab-3/3A Relationships between Categorical Variables.ipynb
@@ -2246,6 +2246,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 2.** Calculate the marginal distribution of day of week in two different ways."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
